added required field device_id on adding device confirmation
